--- a/Code/ShipWorks.UI/Dialogs/DefaultPrinters/DefaultPrinters.xaml
+++ b/Code/ShipWorks.UI/Dialogs/DefaultPrinters/DefaultPrinters.xaml
@@ -4,9 +4,11 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                  xmlns:local="clr-namespace:ShipWorks.UI.Dialogs.DefaultPrinters"
                   mc:Ignorable="d"
                   Title="Default Printers"
-                  SizeToContent="WidthAndHeight">
+                  SizeToContent="WidthAndHeight"
+                  d:DataContext="{d:DesignInstance local:DefaultPrintersViewModel}">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -46,28 +48,68 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
             <!-- Standard printer section -->
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Standard printer" Style="{StaticResource Header}" />
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="Printer:" Style="{StaticResource FieldLabel}"/>
-            <ComboBox Grid.Row="1" Grid.Column="1" />
-            <Button Grid.Row="1" Grid.Column="2" Content="Use Default" Style="{StaticResource UseDefaultButton}" />
-            <TextBlock Grid.Row="2" Grid.Column="0" Text="Source:" Style="{StaticResource FieldLabel}"/>
-            <ComboBox Grid.Row="2" Grid.Column="1"/>
+            <TextBlock Grid.Row="0" Grid.Column="0"
+                       Text="Standard printer"
+                       Style="{StaticResource Header}" />
+            <TextBlock Grid.Row="1" Grid.Column="0"
+                       Text="Printer:"
+                       Style="{StaticResource FieldLabel}"/>
+            <ComboBox Grid.Row="1" Grid.Column="1"
+                      ItemsSource="{Binding Printers}"
+                      SelectedValue="{Binding StandardPrinterName}"
+                      DisplayMemberPath="Key"
+                      SelectedValuePath="Value"/>
+            <Button Grid.Row="1" Grid.Column="2"
+                    Content="Use Default"
+                    Style="{StaticResource UseDefaultButton}" />
+            <TextBlock Grid.Row="2" Grid.Column="0"
+                       Text="Source:"
+                       Style="{StaticResource FieldLabel}"/>
+            <ComboBox Grid.Row="2" Grid.Column="1"
+                      ItemsSource="{Binding StandardPaperSources}"
+                      SelectedValue="{Binding StandardPaperSource}"
+                      DisplayMemberPath="Key"
+                      SelectedValuePath="Value"/>
             <!-- Thermal printer section -->
-            <TextBlock Grid.Row="4" Grid.Column="0" Text="Thermal printer" Style="{StaticResource Header}" />
-            <TextBlock Grid.Row="5" Grid.Column="0" Text="Printer:" Style="{StaticResource FieldLabel}"/>
-            <ComboBox Grid.Row="5" Grid.Column="1"/>
-            <Button Grid.Row="5" Grid.Column="2" Content="Use Default" Style="{StaticResource UseDefaultButton}"/>
-            <TextBlock Grid.Row="6" Grid.Column="0" Text="Source:" Style="{StaticResource FieldLabel}"/>
-            <ComboBox Grid.Row="6" Grid.Column="1"/>
+            <TextBlock Grid.Row="4" Grid.Column="0"
+                       Text="Thermal printer"
+                       Style="{StaticResource Header}" />
+            <TextBlock Grid.Row="5" Grid.Column="0"
+                       Text="Printer:"
+                       Style="{StaticResource FieldLabel}"/>
+            <ComboBox Grid.Row="5" Grid.Column="1"
+                      ItemsSource="{Binding Printers}"
+                      SelectedValue="{Binding ThermalPrinterName}"
+                      DisplayMemberPath="Key"
+                      SelectedValuePath="Value"/>
+            <Button Grid.Row="5" Grid.Column="2"
+                    Content="Use Default"
+                    Style="{StaticResource UseDefaultButton}"/>
+            <TextBlock Grid.Row="6" Grid.Column="0"
+                       Text="Source:"
+                       Style="{StaticResource FieldLabel}"/>
+            <ComboBox Grid.Row="6" Grid.Column="1"
+                      ItemsSource="{Binding ThermalPaperSources}"
+                      SelectedValue="{Binding ThermalPaperSource}"
+                      DisplayMemberPath="Key"
+                      SelectedValuePath="Value"/>
             <!-- Overwrite checkbox -->
-            <CheckBox Grid.Row="7" Grid.Column="1" Content="Overwrite configured templates" Margin="10 0 0 0"/>
+            <CheckBox Grid.Row="7" Grid.Column="1"
+                      Content="Overwrite configured templates"
+                      Margin="10 0 0 0"
+                      IsChecked="{Binding OverrideExistingPrinters}"/>
         </Grid>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="2"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right">
             <Button Content="Cancel" 
                     Style="{StaticResource SmallSecondaryButton}" 
                     IsCancel="True" 
                     Margin="{StaticResource StandardPaddingRight}"/>
-            <Button Content="Ok" Style="{StaticResource SmallPrimaryButton}" IsDefault="True"/>
+            <Button Content="Ok"
+                    Style="{StaticResource SmallPrimaryButton}"
+                    IsDefault="True"
+                    Command="{Binding SetDefaults}"/>
         </StackPanel>
     </Grid>
 </ui:InteropWindow>
