--- a/Code/ShipWorks.UI/Styles/BlueSteel/Colors.xaml
+++ b/Code/ShipWorks.UI/Styles/BlueSteel/Colors.xaml
@@ -7,6 +7,7 @@
     <SolidColorBrush x:Key="IconColor" Color="#4a4a4a"/>
     <SolidColorBrush x:Key="ControlTextColor" Color="#4a4a4a"/>
     <SolidColorBrush x:Key="SelectionColor" Color="#4a90e2"/>
+    <SolidColorBrush x:Key="DisabledTextColor" Color="#FF838383"/>
 
     <!-- Button Colors -->
     <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
