--- a/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
@@ -9,7 +9,7 @@
       xmlns:fa5="http://schemas.fontawesome.com/icons/"
       DataContext="{Binding Path=DatabaseConfigViewModel, Source={StaticResource Locator}}"
       mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="575"
       x:Name="DatabaseConfigPage"
       Title="DatabaseConfig">
     <Page.Resources>
@@ -24,6 +24,11 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <StackPanel>
+            <TextBlock Style="{StaticResource Header}" Text="Configure Database" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Margin="0,10,0,20">
+                <TextBlock.TextDecorations>
+                    <TextDecoration/>
+                </TextBlock.TextDecorations>
+            </TextBlock>
             <TextBlock Style="{StaticResource Header}" Text="Where is your database running?"/>
             <StackPanel Margin="0,0,0,20">
                 <StackPanel Orientation="Horizontal">
