--- a/Code/ShipWorks.Installer/Views/LocationConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/LocationConfig.xaml
@@ -6,13 +6,18 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="LocationConfig"
-    d:DesignHeight="300"
-    d:DesignWidth="300"
+    d:DesignHeight="600"
+    d:DesignWidth="575"
     DataContext="{Binding Path=LocationConfigViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
 
     <Grid>
         <StackPanel>
+            <TextBlock  Grid.Column="1" Style="{StaticResource Header}" Text="Location Configuration" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Margin="0,10,0,20">
+                <TextBlock.TextDecorations>
+                    <TextDecoration/>
+                </TextBlock.TextDecorations>
+            </TextBlock>
             <TextBlock Style="{StaticResource Header}" Text="Select your desired warehouse for this installation:" />
             <TextBlock Text="Selecting your warehouse links it with your database, for faster setup across multiple sites."  TextWrapping="Wrap" FontSize="10" Margin="0,10,0,0"/>
             <ComboBox Style="{StaticResource FormComboBox}" Margin="0,10,0,0" Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Path=WarehouseList}" DisplayMemberPath="Details.Name" SelectedItem="{Binding SelectedWarehouse, Mode=TwoWay}"/>
