--- a/Code/ShipWorks.Installer/Views/Login.xaml
+++ b/Code/ShipWorks.Installer/Views/Login.xaml
@@ -8,15 +8,14 @@
     xmlns:c="clr-namespace:ShipWorks.Installer.Controls"
     xmlns:convert="clr-namespace:ShipWorks.Installer.ValueConverters"
     Title="Login"
-    d:DesignHeight="300"
-    d:DesignWidth="320"
+    d:DesignHeight="600"
+    d:DesignWidth="575"
     DataContext="{Binding Path=LoginViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
 
     <Page.Resources>
         <convert:IsEmptyConverter x:Key="IsEmptyConverter"/>
     </Page.Resources>
-
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -26,6 +25,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="auto"/>
@@ -33,16 +33,22 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Welcome to ShipWorks! Lets get you setup." Grid.ColumnSpan="4" HorizontalAlignment="Center" Margin="0,10"/>
+        <TextBlock  Grid.ColumnSpan="4" Style="{StaticResource Header}" Text="Login" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Margin="0,10">
+            <TextBlock.TextDecorations>
+                <TextDecoration/>
+            </TextBlock.TextDecorations>
+        </TextBlock>
         
-        <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="1" Grid.Column="1" Text="Username" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox Style="{StaticResource BlueSteelTextBox}" Grid.Row="1" Grid.Column="2" Width="150" VerticalAlignment="Center" Text="{Binding Username}"/>
+        <TextBlock Text="Welcome to ShipWorks! Lets get you setup." Grid.Row="1" Grid.ColumnSpan="4" HorizontalAlignment="Center" Margin="0,10"/>
+        
+        <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="2" Grid.Column="1" Text="Username" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Style="{StaticResource BlueSteelTextBox}" Grid.Row="2" Grid.Column="2" Width="150" VerticalAlignment="Center" Text="{Binding Username}"/>
 
-        <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="2" Grid.Column="1" Text="Password" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <c:BindablePasswordBox Grid.Row="2" Grid.Column="2" Width="150" VerticalAlignment="Center" Password="{Binding Password, Mode=OneWayToSource}"/>
+        <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="3" Grid.Column="1" Text="Password" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <c:BindablePasswordBox Grid.Row="3" Grid.Column="2" Width="150" VerticalAlignment="Center" Password="{Binding Password, Mode=OneWayToSource}"/>
                 
         <Button Style="{StaticResource SmallButton}" 
-                Grid.Column="2" Grid.Row="3" 
+                Grid.Column="2" Grid.Row="4" 
                 Command="{Binding NextCommandAsync}" 
                 Content="Sign In" 
                 HorizontalAlignment="Center" 
@@ -50,20 +56,20 @@
                 Margin="0,10"
                 IsDefault="True"/>
         
-        <TextBlock Grid.Column="2" Grid.Row="4" HorizontalAlignment="Center">
+        <TextBlock Grid.Column="2" Grid.Row="5" HorizontalAlignment="Center">
             <Hyperlink Command="{Binding NoAccountCommand}">
                 I don't have a ShipWorks account
             </Hyperlink>
         </TextBlock>
-        <TextBlock Grid.Column="2" Grid.Row="5" HorizontalAlignment="Center" Margin="0,10">
+        <TextBlock Grid.Column="2" Grid.Row="6" HorizontalAlignment="Center" Margin="0,10">
             <Hyperlink Command="{Binding ForgotPasswordCommand}">
                 I forgot my password
             </Hyperlink>
         </TextBlock>
 
-        <TextBlock Foreground="Red" Text="{Binding Error}" Visibility="{Binding Error, Converter={StaticResource IsEmptyConverter}}" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="6" HorizontalAlignment="Center" TextWrapping="Wrap" />
+        <TextBlock Foreground="Red" Text="{Binding Error}" Visibility="{Binding Error, Converter={StaticResource IsEmptyConverter}}" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="7" HorizontalAlignment="Center" TextWrapping="Wrap" />
 
-        <StackPanel Margin="10" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
+        <StackPanel Margin="10" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
             <Button Style="{StaticResource SmallSecondaryButton}" Command="{Binding BackCommand}" Margin="0,0,10,0">Back</Button>
             <Button Style="{StaticResource SmallSecondaryButton}" IsCancel="True" Command="{Binding CancelCommand}">Cancel</Button>
         </StackPanel>
