--- a/Code/ShipWorks.Installer/Views/SystemCheck.xaml
+++ b/Code/ShipWorks.Installer/Views/SystemCheck.xaml
@@ -6,11 +6,16 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="System Check"
-    d:DesignHeight="300"
-    d:DesignWidth="300"
+    d:DesignHeight="600"
+    d:DesignWidth="575"
     DataContext="{Binding Path=SystemCheckViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
-    <Grid>
-        <TextBlock Text="Checking your system..." HorizontalAlignment="Center"/>
-    </Grid>
+    <StackPanel>
+        <TextBlock  Grid.Column="1" Style="{StaticResource Header}" Text="System Check" HorizontalAlignment="Center" FontSize="20" Margin="0,10">
+            <TextBlock.TextDecorations>
+                <TextDecoration/>
+            </TextBlock.TextDecorations>
+        </TextBlock>
+        <TextBlock Text="Checking your system..." HorizontalAlignment="Center" Margin="0,10,0,0"/>
+    </StackPanel>
 </Page>
