--- a/Code/ShipWorks.Installer/Views/UpgradeShipWorks.xaml
+++ b/Code/ShipWorks.Installer/Views/UpgradeShipWorks.xaml
@@ -7,20 +7,23 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:fa5="http://schemas.fontawesome.com/icons/"
     Title="UpgradeShipWorks"
-    d:DesignHeight="300"
-    d:DesignWidth="300"
+    d:DesignHeight="600"
+    d:DesignWidth="575"
     DataContext="{Binding Path=UpgradeShipWorksViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
-    <Grid>
-        <StackPanel>
+    <StackPanel>
+        <TextBlock Style="{StaticResource Header}" Text="Upgrade ShipWorks" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Margin="0,10">
+            <TextBlock.TextDecorations>
+                <TextDecoration/>
+            </TextBlock.TextDecorations>
+        </TextBlock>
             <TextBlock Text="Upgrading ShipWorks" />
             <fa5:FontAwesome Icon="Solid_Spinner"
                          FontSize="40"
                          Foreground="#2A67AB" 
                          Grid.Column="1" 
                          VerticalAlignment="Center" 
-                         HorizontalAlignment="Left"
-                         Margin="40,4,0,0"
+                         HorizontalAlignment="Center"
                          Spin="True"
                          SpinDuration="1.5"/>
             <TextBlock Text="Super fast label speed, automated inventory management, barcode scanning, batch processing...and that's just scratching the surface." 
@@ -28,5 +31,4 @@
                        Margin="0,10"/>
             <TextBlock Text="It just Works." Margin="0,10"/>
         </StackPanel>
-    </Grid>
 </Page>
