--- a/Code/ShipWorks.Installer/Views/UseShipWorks.xaml
+++ b/Code/ShipWorks.Installer/Views/UseShipWorks.xaml
@@ -6,8 +6,8 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="UseShipWorks"
-    d:DesignHeight="300"
-    d:DesignWidth="300"
+    d:DesignHeight="600"
+    d:DesignWidth="575"
     DataContext="{Binding Path=UseShipWorksViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid>
@@ -16,6 +16,11 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
+        <TextBlock Style="{StaticResource Header}" Text="Installation Complete" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Margin="0,10">
+            <TextBlock.TextDecorations>
+                <TextDecoration/>
+            </TextBlock.TextDecorations>
+        </TextBlock>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1">
             <TextBlock Style="{StaticResource Header}" Text="Congrats! You've installed ShipWorks."  HorizontalAlignment="Center"/>
             <Button Style="{StaticResource LargePrimaryButton}" Command="{Binding NextCommand}" Content="Launch ShipWorks" Margin="0,20"/>
